[package]
name = "rectree2svg"
version = "0.1.1"
authors = ["Simon Penel <simon.penel@univ-lyon1.fr>"]
edition = "2018"
description ="Read a phylogenic tree in newick, phyloxml or recPhyloXML file and create a svg."
license="CECILL-2.1"
license-file="LICENCE"
keywords="phylogeny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
svg = "0.8.1"
log = "0.4.14"
env_logger = "0.8.3"
structopt = "0.3"
getopt = "1.1.0"
roxmltree = "0.14.0"
random_color = "0.5.0"
webbrowser = "0.5.5"
