[package]
name = "rectree2svg"
version = "0.1.5"
authors = ["Simon Penel <simon.penel@univ-lyon1.fr>"]
edition = "2018"
description ="Read a phylogenetic tree in newick, phyloxml or recPhyloXML file and create a svg."
license="CECILL-2.1"
keywords=["phylogeny", "recphyloxml", "tree-reconciliation", "svg", "phylogenetic-tree"]
homepage = "https://github.com/simonpenel/rectree2svg/wiki"
repository = "https://github.com/simonpenel/rectree2svg"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
svg = "0.8.1"
log = "0.4.14"
env_logger = "0.8.3"
structopt = "0.3"
getopt = "1.1.0"
roxmltree = "0.14.0"
random_color = "0.5.0"
webbrowser = "0.5.5"
